--- a/src/components/dashboard/userTable.module.css
+++ b/src/components/dashboard/userTable.module.css
@@ -32,7 +32,7 @@
   }
 
   .deleteButton {
-    background-color: #02081C;
+    background-color: #FF4545;
     color: white;
     border: none;
     padding: 6px 12px;
