--- a/src/components/profileComp/profile.module.css
+++ b/src/components/profileComp/profile.module.css
@@ -73,7 +73,7 @@
 }
 
 .dp {
-    min-width: 40%;
+    max-width: 40%;
     aspect-ratio: 1/1;
     border-radius: 100%;
     display: flex;
@@ -88,14 +88,17 @@
 
 .con {
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .edit {
     width: 15px;
     aspect-ratio: 1/1;
     position: absolute;
-    bottom: 15px;
-    right: 15px;
+    bottom: 10px;
+    /* right: 15px; */
     background-color: black;
     color: white;
     font-size: 15px;
