--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -104,17 +104,24 @@
 }
 
 .profileBtn {
-    width: 27px;
-    height: 27px;
+    width: 30px;
+    height: 30px;
     background-color: white;
     border-radius: 100%;
     margin-right: 10px;
-    padding: 2px;
+    /* padding: 2px; */
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
     overflow: hidden;
+    border: 2px solid rgb(162, 162, 162);
+}
+
+.image {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
 }
 
 .profileIcon {
